--- a/HeiMaPlayer/app/src/main/AndroidManifest.xml
+++ b/HeiMaPlayer/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.samcooperstudio.heimaplayer">
+          xmlns:tools="http://schemas.android.com/tools" package="com.samcooperstudio.heimaplayer">
 
     <application
             android:allowBackup="true"
@@ -8,7 +8,8 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".ui.activity.SplashActivity"
                   android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
@@ -19,6 +20,8 @@
         </activity>
 
         <activity android:name=".ui.activity.MainActivity"/>
+        <activity android:name=".ui.activity.SettingActivity"/>
+        <activity android:name=".ui.activity.AboutActivity"/>
 
     </application>
 
