--- a/HeiMaPlayer/app/build.gradle
+++ b/HeiMaPlayer/app/build.gradle
@@ -30,10 +30,15 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //noinspection GradleCompatible
     implementation 'com.android.support:preference-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.yinglan.alphatabs:library:1.0.8'
+    implementation "com.squareup.okhttp3:okhttp:4.0.1"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
